@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS=foreign
 
-SUBDIRS=audio conf npc script
+SUBDIRS=audio conf
 
 OBJECTS = actors.o imagewin.o objs.o exult.o gamewin.o drag.o gumps.o \
 	gametxt.o \
@@ -8,8 +8,12 @@ OBJECTS = actors.o imagewin.o objs.o exult.o gamewin.o drag.o gumps.o \
 	tqueue.o gameclk.o mouse.o items.o lists.o vec.o
 
 HFILES = acconfig.h actors.h autoconfig.h fnames.h gameclk.h gamewin.h gumps.h \
-	imagewin.h imagwin.h items.h lists.h mouse.h npcnear.h objs.h segfile.h \
-	text.h tqueue.h usecode.h utils.h vec.h vgafile.h
+	imagewin.h items.h lists.h mouse.h npcnear.h objs.h segfile.h \
+	tqueue.h usecode.h utils.h vec.h vgafile.h
+
+SOURCES = $(HFILES) $(OBJECTS:%.o=%.cc)
+
+EXTRA_DIST = CHANGELOG
 
 SUFFIXES=.cc .h
 
@@ -41,18 +45,6 @@ all-local: exult
 exult: $(OBJECTS) audio/libaudio.a
 	$(CXX) $(LFLAGS) -o $@ $(OBJECTS) $(STATIC) $(LIBS)
 
-exult.exe:
-	make DOS=1
-
-release:
-	make clean
-#	make DOS=1
-#	make clean
-	make RELEASE=1
-	make tar
-#	make w32zip
-#	make doszip
-
 tar:	exult
 	strip exult
 	(cd ..; tar cvfz exult$(RELNUM).tgz exult/{*.h,*.cc,makefile,README,README.dos,CHANGELOG,exult,*.ttf,*.scr} exult/npc/{*.h,*.cc,makefile} exult/script/{*.h,*.cc,*.y,*.l,makefile})
@@ -60,17 +52,11 @@ tar:	exult
 w32zip:
 	(cd ..; zip exult$(RELNUM)w.zip exult/{*.h,*.cc,makefile,exult.ide,README,readme.w95,CHANGELOG,exultw32.exe,*.ttf,*.scr} exult/npc/{*.h,*.cc,makefile} exult/script/{*.h,*.cc,*.y,*.l,makefile})
 
-doszip:	exult.exe
-	(cd ..; zip exult06.zip exult/{exult.exe,avatar.ttf,*.scr,csdpmi3b.zip,README,CHANGELOG})
-
 srczip:
 	(cd ..; zip exult$(RELNUM).zip exult/{*.h,*.cc,makefile,README,README.dos,CHANGELOG,*.ttf,*.scr} exult/npc/{*.h,*.cc,makefile} exult/script/{*.h,*.cc,*.y,*.l,makefile})
 
 clean:
-	(cd npc; make clean)
-	(cd script; make clean)
-	-rm -f *.o exult
-
+	-rm -f *.o core exult
 
 
 libtool: $(LIBTOOL_DEPS)
